# pipeline-server

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  guide.txt  pyproject.toml  requirements.txt  work.txt
.claude/: CLAUDE.md
.claude/agents/: agent-recruiter.md  code-reviewer.md  convention-guardian.md  domain-builder.md  e2e-test-designer.md  infra-builder.md  integration-test-designer.md  journal-recorder.md  persistence-builder.md  pipeline-orchestrator.md  product-owner.md  project-lead.md  project-manager.md  service-builder.md  test-harness-orchestrator.md  unit-test-designer.md
.serena/: project.yml
app/: dependencies.py  main.py  rest_dependencies.py  worker.py  worker_dependencies.py
app/application/: analysis_service.py  analyze_task_factory.py  data_ingestor.py  data_read_service.py  decorators.py  file_loaders.py  ingestion_service.py  label_refiner.py  odd_tag_refiner.py  outbox_relay.py  outbox_relay_service.py  parsers.py  phase_runners.py  pipeline_service.py  rejection_read_service.py  rejection_service.py  search_service.py  selection_refiner.py  task_read_service.py  task_service.py  validators.py
app/domain/: __init__.py  enums.py  exceptions.py  models.py  ports.py  value_objects.py
docs/: ai-agent-analysis.md  architecture.md  convention-python-ddd.md  data-analysis.md  data-model.md  design-architecture.md  readme-outline.md  research-python-ddd.md  testing-strategy.md
docs/adr/: 001-polyglot-persistence.md  002-celery-outbox.md  (+1 more)
notebooks/: data-analysis.ipynb
tests/: conftest.py
(+56 files in other folders)
